Fixed overflow scroll issue on issue pages

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -23,7 +23,8 @@ body {
   padding: 0;
 }
 
-html {
+html,
+body.no-overflow {
   overflow-x: hidden;
 }
 
